--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <h2> <strong>   Image processing on photo Album </strong></h2>
 <a href="https://github.com/SaiNadh009/SaiNadh009.github.io/tree/main/Image%20processing%20on%20photo%20Album">gitlink</a>
 <h2> <strong> Building AI enable Tic-ta-toe game </strong></h2>
-<a href="https://github.com/SaiNadh009/SaiNadh009.github.io/tree/main/Tic-tac-toe">gitlink</a>
+<a href="Tic-tac-toe/index.html">gitlink</a>
 <h2> <strong>Building Wordle game </strong></h2>
-<a href="https://github.com/SaiNadh009/SaiNadh009.github.io/tree/main/Wordle">gitlink</a>
+<a href="Wordle/index.html">gitlink</a>
 
 
 
