--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1> Projects: </h1>
 
 <h2> <strong>   Image processing on photo Album </strong></h2>
-<a href="https://github.com/SaiNadh009/SaiNadh009.github.io/tree/main/Image%20processing%20on%20photo%20Album">gitlink</a>
+<a href="Image processing on photo Album/ImageProcessing.html">gitlink</a>
 <h2> <strong> Building AI enable Tic-ta-toe game </strong></h2>
 <a href="Tic-tac-toe/index.html">gitlink</a>
 <h2> <strong>Building Wordle game </strong></h2>
